--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .container {
 display: flex;
 flex-direction: row;
-background-color:#f2796e;
+background-color:hsl(0, 100%, 74%);
 background-image: url("images/bg-intro-desktop.png");
 
 
@@ -101,7 +101,7 @@ border-radius: 10px;
   .question {
     font-size: 15px;
     text-align: center;
-    background-color: #5d16af;
+    background-color:hsl(248, 32%, 49%);
     padding: 5%;
     border-radius: 8px;
     margin-bottom: 10%;
@@ -133,7 +133,7 @@ border-radius: 10px;
   }
   
   .success-icon {
-    color: green;
+    color: hsl(154, 59%, 51%);
   }
   
   .error {
@@ -149,8 +149,8 @@ border-radius: 10px;
     margin-top: 15px;
     width: 100%;
     height: 45px;
-    background-color: #2abb97;
-    border: 2px solid #2abb97;
+    background-color: hsl(154, 59%, 51%);
+    border: 2px solid hsl(154, 59%, 51%);
     border-radius: 8px;
     color: #fff;
     font-size: 15px;
@@ -167,7 +167,7 @@ border-radius: 10px;
   * ! Media Queries are here
   **/
   
-  @media (max-width: 900px) {
+  @media (max-width: 1440px) {
     .container {
       flex-direction: column;
     }
@@ -184,6 +184,12 @@ border-radius: 10px;
   }
   
   @media (max-width: 425px) {
+    form {
+      padding: 20px;
+    }
+  }
+
+@media (max-width: 325px) {
     form {
       padding: 20px;
     }
